--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,11 +1,10 @@
 footer{
     bottom: 0;
     position: fixed;
-    padding: 1.6rem;
     background-color: #333;
     color: white;
     font-size: 1.2rem;
     text-align: center;
+    padding: 50px;
     width: 100%;
-    margin-top: 20px;
 }
